[#446][BUG] Fixing a CSS problem on IE 11 and below

--- a/live/app/styles/globals/_redesign-inputs.scss
+++ b/live/app/styles/globals/_redesign-inputs.scss
@@ -123,10 +123,6 @@ input[type="checkbox"]:checked:focus:before {
   cursor: pointer;
 }
 
-input[type=radio] {
-  width: 0;
-}
-
 input[type=radio]:before,
 input[type=radio]:checked:after {
   display: block;
@@ -138,7 +134,7 @@ input[type=radio]:checked:after {
 input[type=radio]:checked:after {
   height: 8.5px;
   width: 8.5px;
-  top: -15px;
+  top: -13px;
   left: 2px;
 
   background-color: #3D68FF;
@@ -147,7 +143,7 @@ input[type=radio]:checked:after {
 input[type=radio]:before {
   height: 17px;
   width: 17px;
-  top: -2px;
+  top: 0px;
   left: -2px;
 
   border: solid 2px #7D808B;
